Create initial boilerplate

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -31,3 +31,93 @@ input, button {
     align-items: center;
     padding: 16px;
 }
+.app {
+    display: flex;
+    font-family: Lato;
+    text-align: center;
+    padding: 16px;
+    width: 300px;
+    height: 600px;
+    background-color: #242424;
+    color: #ffffff;
+    border-radius: 4px;
+    flex-direction: column;
+}
+
+.form-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    text-transform: uppercase;
+    width: 100%;
+    height: 40px;
+    border-bottom: solid 1px rgba(255, 255, 255, 0.1);
+}
+
+.input-field {
+    display: flex;
+    border-radius: 4px;
+    padding: 8px;
+}
+
+.add-task-btn {
+    display: flex;
+    border-radius: 4px;
+    background-color: #0088ff;
+    color: #ffffff;
+    text-transform: uppercase;
+    height: 30px;
+}
+
+.list-container {
+    max-height: 95%;
+}
+
+.each-todo {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 0;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+;}
+
+.done-button {
+    margin-right: 4px;
+    background-color: #00cc55;
+    color: #ffffff;
+}
+
+.delete-button {
+    color: #ffffff;
+    background-color: #ff0033;
+}
+
+.done {
+    text-decoration: line-through;
+    opacity: 0.3;
+}
+
+@-webkit-keyframes animate {
+    from {background-position:0 0;}
+    to {background-position: 500px 0;}
+}
+
+@-moz-keyframes animate {
+    from {background-position:0 0;}
+    to {background-position: 500px 0;}
+}
+
+@-ms-keyframes animate {
+    from {background-position:0 0;}
+    to {background-position: 500px 0;}
+}
+
+@-o-keyframes animate {
+    from {background-position:0 0;}
+    to {background-position: 500px 0;}
+}
+
+@keyframes animate {
+    from {background-position:0 0;}
+    to {background-position: 500px 0;}
+}
